input: keylongpress: Add keylongpress driver
Change-Id: Ie6c697efde81c359b50451b1acd7be0998783d97
Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Jira-ID: ADM-1601

--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -197,6 +197,13 @@ config INPUT_KEYCOMBO
 	---help---
 	  Say Y here if you want to take action when some keys are pressed;
 
+config INPUT_KEYLONGPRESS
+	bool "Long press key"
+	depends on INPUT
+	select INPUT_KEYRESET
+	---help---
+	  Say Y here if you want to poweroff when some keys are long pressed;
+
 comment "Input Device Drivers"
 
 source "drivers/input/keyboard/Kconfig"
