ADSP: integrate ADSP sound for H3, M3, M3N board
Signed-off-by: tienphitran <tien.tran.uw@renesas.com>
[takeshi.kihara.df: fix W=1 dtc warning]
Signed-off-by: Takeshi Kihara <takeshi.kihara.df@renesas.com>

--- a/arch/arm64/boot/dts/renesas/r8a7796.dtsi
+++ b/arch/arm64/boot/dts/renesas/r8a7796.dtsi
@@ -798,6 +798,11 @@
 		method = "smc";
 	};
 
+	rcar_adsp_sound: adsp_sound {
+		compatible =  "renesas,rcar_adsp_sound_gen3";
+		status = "disabled";
+	};
+
 	/* External SCIF clock - to be overridden by boards that provide it */
 	scif_clk: scif {
 		compatible = "fixed-clock";
