--- a/arch/arm64/configs/android_p_ulcb_defconfig
+++ b/arch/arm64/configs/android_p_ulcb_defconfig
@@ -419,6 +419,7 @@ CONFIG_SW_SYNC=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
+CONFIG_BOOTLOADER_CONTROL=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 # CONFIG_COMMON_CLK_XGENE is not set
