--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -151,6 +151,9 @@ config RTC_DRV_TEST
 	  This driver can also be built as a module. If so, the module
 	  will be called rtc-test.
 
+config RTC_DRV_FAKE
+	tristate "Fake RTC device driver"
+
 comment "I2C RTC drivers"
 
 if I2C
