defconfig: RTC: activate RTC for all Renesas boards.
Change-Id: I69190711fbe425ac11297836b75b447e579ce210
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/configs/android_p_salvator-x_defconfig
+++ b/arch/arm64/configs/android_p_salvator-x_defconfig
@@ -429,6 +429,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHI=y
 CONFIG_MMC_DW=y
 CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_FAKE=y
 CONFIG_DMADEVICES=y
 CONFIG_RCAR_DMAC=y
 CONFIG_RENESAS_USB_DMAC=y
