--- a/arch/arm64/configs/android_p_kingfisher_defconfig
+++ b/arch/arm64/configs/android_p_kingfisher_defconfig
@@ -286,6 +286,7 @@ CONFIG_WL18XX=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_KEYLONGPRESS=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TABLET=y
