--- a/arch/arm64/configs/android_p_salvator-x_defconfig
+++ b/arch/arm64/configs/android_p_salvator-x_defconfig
@@ -303,6 +303,7 @@ CONFIG_RTL8192CU=m
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_KEYLONGPRESS=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_MOUSE_PS2 is not set
 CONFIG_INPUT_TABLET=y
