--- a/arch/arm64/configs/android_p_ulcb_defconfig
+++ b/arch/arm64/configs/android_p_ulcb_defconfig
@@ -301,6 +301,7 @@ CONFIG_RTL8192CU=m
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_KEYLONGPRESS=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TABLET=y
