--- a/arch/arm64/configs/android_ulcb_defconfig
+++ b/arch/arm64/configs/android_ulcb_defconfig
@@ -277,7 +277,7 @@ CONFIG_RTL_CARDS=m
 CONFIG_RTL8192CU=m
 CONFIG_INPUT_FF_MEMLESS=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_KEYRESET=y
+CONFIG_INPUT_KEYLONGPRESS=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_MOUSE_PS2 is not set
 CONFIG_INPUT_TABLET=y
