--- a/arch/arm64/configs/android_p_kingfisher_defconfig
+++ b/arch/arm64/configs/android_p_kingfisher_defconfig
@@ -345,6 +345,8 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_RENESAS_FDP1=y
 CONFIG_VIDEO_RENESAS_FCP=y
 CONFIG_VIDEO_RENESAS_VSP1=y
+CONFIG_RADIO_SI4689=y
+CONFIG_I2C_SI4689=m
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_DRM=y
 CONFIG_DRM_RCAR_DU=y
