DTS: r8a7795: r8a7796: Define R-Car H3/M3 energy model
Set the capacity and the power to r8a7795 and r8a7796 SOCs.
This value is based on the result of the evaluation.

Change-Id: I20d236eff0cc5399a55f0dd8313ab7a34939cc0c
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-h3.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-h3.dtsi
@@ -10,3 +10,92 @@
 
 #include "android-fstab.dtsi"
 #include "android-common.dtsi"
+
+/ {
+    energy-costs {
+            CPU_COST_0: core-cost0 {
+                    busy-cost-data = <
+                            308   315
+                            596   618
+                            898   934
+                            965   1044
+                            1024  1286
+                    >;
+                    idle-cost-data = <
+                            71
+                            71
+                            0
+                            0
+                    >;
+            };
+            CPU_COST_1: core-cost1 {
+                    busy-cost-data = <
+                            379   131
+                    >;
+                    idle-cost-data = <
+                            17
+                            17
+                            0
+                            0
+                    >;
+            };
+            CLUSTER_COST_0: cluster-cost0 {
+                    busy-cost-data = <
+                            308   33
+                            596   71
+                            898   112
+                            965   126
+                            1024  154
+                    >;
+                    idle-cost-data = <
+                            112
+                            112
+                            0
+                            0
+                    >;
+            };
+            CLUSTER_COST_1: cluster-cost1 {
+                    busy-cost-data = <
+                            379   16
+                    >;
+                    idle-cost-data = <
+                            17
+                            17
+                            0
+                            0
+                    >;
+            };
+	};
+};
+
+&a57_0 {
+	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+};
+
+&a57_1 {
+	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+};
+
+&a57_2 {
+	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+};
+
+&a57_3 {
+	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+};
+
+&a53_0 {
+	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+};
+
+&a53_1 {
+	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+};
+
+&a53_2 {
+	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+};
+
+&a53_3 {
+	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+};
