DTS: r8a7795: r8a7796: Add multi-cluster definition
This patch adds the "cpu-map" for multi-cluster into r8a7795, r8a7796
device tree. This definition is used to parse the cpu topology.

Change-Id: Iff7238e1dfc73c245513ff99ddf2c4d2a8f0cb25
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-h3.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-h3.dtsi
@@ -12,6 +12,40 @@
 #include "android-common.dtsi"
 
 / {
+	cpus {
+		cpu-map {
+			cluster0 {
+				core0 {
+					cpu = <&a57_0>;
+				};
+				core1 {
+					cpu = <&a57_1>;
+				};
+				core2 {
+					cpu = <&a57_2>;
+				};
+				core3 {
+					cpu = <&a57_3>;
+				};
+			};
+
+			cluster1 {
+				core0 {
+					cpu = <&a53_0>;
+				};
+				core1 {
+					cpu = <&a53_1>;
+				};
+				core2 {
+					cpu = <&a53_2>;
+				};
+				core3 {
+					cpu = <&a53_3>;
+				};
+			};
+		};
+	};
+
     energy-costs {
             CPU_COST_0: core-cost0 {
                     busy-cost-data = <
