DTS: Salvator: Added LVDS node connection to RCAR-DU
Originates from Oleksii Gulchenko patch - 4458de9

Change-Id: Ib6830a6f3adcf516914628dbd7f4c6d8c2488cb9
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-salvator.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-salvator.dtsi
@@ -59,3 +59,13 @@
 		};
 	};
 };
+
+&du {
+	ports {
+		port@3 {
+			lvds_connector: endpoint {
+				remote-endpoint = <&lvds_in>;
+			};
+		};
+	};
+};
