DTS: KF: r8a7795: activate GMSL camera board
Change-Id: Id764d6bf4b8afdb0f9d760e0514825b35e650101
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-h3-kingfisher.dts
+++ b/arch/arm64/boot/dts/renesas/android-h3-kingfisher.dts
@@ -14,3 +14,4 @@
 #include "android-r8a7795-h3ulcb-kf.dts"
 #include "android-h3ulcb.dts"
 #include "android-kingfisher.dtsi"
+#include "ulcb-kf-cn10.dtsi"
