--- a/arch/arm64/configs/android_kingfisher_defconfig
+++ b/arch/arm64/configs/android_kingfisher_defconfig
@@ -348,6 +348,8 @@ CONFIG_RADIO_SI4689=y
 CONFIG_I2C_SI4689=m
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_VIDEO_OV5647=y
+CONFIG_SOC_CAMERA_MAX9286=y
+CONFIG_SOC_CAMERA_OV106XX=y
 CONFIG_DRM=y
 CONFIG_DRM_RCAR_DU=y
 CONFIG_DRM_RCAR_DW_HDMI=y
