DTS: r8a7795: Added information about L1 and L2 caches
Derived from Dmytro Prokopchuk patch - 7676d11

Change-Id: I2356391dc9b7dcc2f7715530ceee1fdbcf2076ee
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-h3.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-h3.dtsi
@@ -104,32 +104,92 @@
 
 &a57_0 {
 	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+	i-cache-size = <0xC000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <256>;
 };
 
 &a57_1 {
 	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+	i-cache-size = <0xC000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <256>;
 };
 
 &a57_2 {
 	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+	i-cache-size = <0xC000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <256>;
 };
 
 &a57_3 {
 	sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
+	i-cache-size = <0xC000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <256>;
 };
 
 &a53_0 {
 	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+	i-cache-size = <0x8000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <128>;
 };
 
 &a53_1 {
 	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+	i-cache-size = <0x8000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <128>;
 };
 
 &a53_2 {
 	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+	i-cache-size = <0x8000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <128>;
 };
 
 &a53_3 {
 	sched-energy-costs = <&CPU_COST_1 &CLUSTER_COST_1>;
+	i-cache-size = <0x8000>;
+	i-cache-line-size = <64>;
+	i-cache-sets = <256>;
+	d-cache-size = <0x8000>;
+	d-cache-line-size = <64>;
+	d-cache-sets = <128>;
+};
+
+&L2_CA57 {
+	cache-size = <0x200000>;
+	cache-line-size = <64>;
+	cache-sets = <2048>;
+};
+
+&L2_CA53 {
+	cache-size = <0x80000>;
+	cache-line-size = <64>;
+	cache-sets = <512>;
 };
