DTS: H3N: Activated support of the 2x2g memory configuration
To build images for the H3N based boards it need to set
H3_OPTION=4GB2x2 at compile time.
Derived from Sergii Boryshchenko patch - 3531e81

Change-Id: I4a42349313999d4c63f395890f012a5feba266e6
Jira-Id: ADM-2066
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/Makefile
+++ b/arch/arm64/boot/dts/renesas/Makefile
@@ -1,6 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 dtb-$(CONFIG_ARCH_R8A7795) += android-h3-salvator-x.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += android-h3-salvator-xs.dtb
+dtb-$(CONFIG_ARCH_R8A7795) += android-h3-salvator-xs-2x2g.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += android-h3ulcb.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += android-h3ulcb-4x2g.dtb
 dtb-$(CONFIG_ARCH_R8A7795) += android-h3-kingfisher.dtb
