defconfig: KF: Enable BD9571MWV regulator
Derived from Dmytro Prokopchuk patch - 0b51417.

Change-Id: I8c98f8c252ad695fee3b993a2bc669a92a8bfbb5
Jira-ID: ADM-2212
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/configs/android_kingfisher_defconfig
+++ b/arch/arm64/configs/android_kingfisher_defconfig
@@ -315,6 +315,7 @@ CONFIG_GPIO_RCAR=y
 CONFIG_GPIO_MAX732X=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_GPIO_BD9571MWV=y
 CONFIG_POWER_AVS=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_SENSORS_ARM_SCPI=y
@@ -324,10 +325,12 @@ CONFIG_THERMAL=y
 CONFIG_RCAR_GEN3_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_RENESAS_WDT=y
+CONFIG_MFD_BD9571MWV=y
 CONFIG_MFD_MAX77620=y
 CONFIG_MFD_SEC_CORE=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_BD9571MWV=y
 CONFIG_REGULATOR_GPIO=y
 # CONFIG_RC_CORE is not set
 CONFIG_MEDIA_SUPPORT=y
