DTS: csi2: vin: gmsl: activate rcar video drivers
This patch is temporary workaround cause by inability to support of the
Renesas vin/csi ports definition in r8a7795.dts file. So next files was
added:
 - android-r8a7795-h3ulcb-4x2g.dts
 - android-r8a7795-h3ulcb-kf.dts
 - android-r8a7795-h3ulcb.dts
 - android-r8a7795.dts

Change-Id: Iabdbcc7c22909a9330e243d2cc982b4dc66c69ec
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-h3ulcb.dts
+++ b/arch/arm64/boot/dts/renesas/android-h3ulcb.dts
@@ -10,6 +10,6 @@
  */
 
 #ifndef __H3ULCB_OVERWRITE__
-#include "r8a7795-h3ulcb.dts"
+#include "android-r8a7795-h3ulcb.dts"
 #endif // __H3ULCB_OVERWRITE__
 #include "android-h3.dtsi"
