--- a/arch/arm64/boot/dts/renesas/android-h3-kingfisher.dts
+++ b/arch/arm64/boot/dts/renesas/android-h3-kingfisher.dts
@@ -11,6 +11,6 @@
 
 /dts-v1/;
 #define __H3ULCB_OVERWRITE__
-#include "r8a7795-h3ulcb-kf.dts"
+#include "android-r8a7795-h3ulcb-kf.dts"
 #include "android-h3ulcb.dts"
 #include "android-kingfisher.dtsi"
