--- a/arch/arm64/configs/android_salvator-x_defconfig
+++ b/arch/arm64/configs/android_salvator-x_defconfig
@@ -390,7 +390,7 @@ CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_USB_HIDDEV=y
-CONFIG_USB=y
+CONFIG_USB=m
 # CONFIG_USB_PCI is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_OTG=y
