--- a/arch/arm64/boot/dts/renesas/android-fstab.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-fstab.dtsi
@@ -19,12 +19,12 @@
         android {
             compatible = "android,firmware";
 
-            vbmeta {
+            vbmeta: vbmeta {
                 compatible = "android,vbmeta";
                 parts = "vbmeta,boot,system,vendor,dtb";
             };
 
-            fstab {
+            fstab: fstab {
                 compatible = "android,fstab";
 
                 vendor {
