--- a/arch/arm64/configs/android_salvator-x_defconfig
+++ b/arch/arm64/configs/android_salvator-x_defconfig
@@ -435,6 +435,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
 CONFIG_ION_CMA_HEAP=y
+CONFIG_ION_RCAR=y
 CONFIG_BOOTLOADER_CONTROL=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
