dts: arm64: ulcb-kf: Use proper way to define si4689 reset gpio
Align shutdown gpio property of si4689 with ported ADIT v4.9 commit
159754c35f8c ("media: radio: si4689: Use proper way to define reset gpio").

Change gpio value from hardcodded number to format of of_get_named_gpio()

Change-Id: If3b0548d9957e082ae35121e50c0e3bfa1774991
Signed-off-by: Stanislav Goncharov <stanislav.goncharov@globallogic.com>
Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Jira-ID: ADM-2487

--- a/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
@@ -638,7 +638,7 @@
 		si4689: radio-si4689@65 {
 			compatible = "si4689";
 			reg = <0x65>;
-			reset_gpio = <331>;  /* (U5) gpio_exp_75 pin 7 */
+			reset_gpio = <&gpio_exp_75 7 GPIO_ACTIVE_HIGH>; /* (U5) P07 */
 			interrupt-parent = <&gpio_exp_74>;
 			interrupts = <12 IRQ_TYPE_EDGE_FALLING>;
 		};
