dts: arm64: ulcb-kf: Use proper way to define kim shutdown gpio
Align shutdown gpio property of kim with ported ADIT v4.9 commit
159754c35f8c ("ti-st: use proper way to get shutdown gpio").

Rename 'nshutdown_gpio' property to 'shutdown-gpios'
Change gpio value from hardcodded number to format of of_get_named_gpio()

Change-Id: Iadb8067e10c8392c0a51bd08dc4157c0c697b835
Signed-off-by: Stanislav Goncharov <stanislav.goncharov@globallogic.com>
Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Jira-ID: ADM-2487

--- a/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
@@ -272,7 +272,7 @@
 
 	kim {
 		compatible = "kim";
-		nshutdown_gpio = <343>;  /* gpio_exp_74 pin 3 */
+		shutdown-gpios = <&gpio_exp_74 3 GPIO_ACTIVE_HIGH>; /* (U11) P03 */
 		/* serial1 */
 		dev_name = "/dev/ttySC1";
 		flow_cntrl = <1>;
