defconfig: KF: activate sound SOC for WiFi and Radio modules
Change-Id: Id3f09e9615aa1f5643212f057c835967c5a80ad4
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/configs/android_kingfisher_defconfig
+++ b/arch/arm64/configs/android_kingfisher_defconfig
@@ -376,6 +376,8 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_RCAR=y
 CONFIG_SND_SOC_AK4613=y
 CONFIG_SND_SOC_PCM3168A_I2C=y
+CONFIG_SND_SOC_SI468X=y
+CONFIG_SND_SOC_WL18XX=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_MULTITOUCH=y
