dts: kingfisher: Re-defined pcm3168a clock select gpio
Changed gpio value from hardcodded number
to format of of_get_named_gpio().

Change-Id: I1168d214d801e771acf1d9db0231df65102bcba4
Signed-off-by: Dmytro Prokopchuk <dmytro.prokopchuk@globallogic.com>
Jira-ID: ADM-2501

--- a/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
@@ -724,7 +724,7 @@
 			clocks = <&snd_clk>;
 			clock-names = "scki";
 			tdm;
-			snd_clk_sel_gpio = <337>; /* (U5) gpio_exp_75 P15 */
+			snd_clk_sel_gpio = <&gpio_exp_75 13 GPIO_ACTIVE_HIGH>; /* (U5) P15 */
 			VDD1-supply = <&codec_en_reg>;
 			VDD2-supply = <&codec_en_reg>;
 			VCCAD1-supply = <&codec_en_reg>;
