--- a/arch/arm64/configs/android_p_kingfisher_defconfig
+++ b/arch/arm64/configs/android_p_kingfisher_defconfig
@@ -446,6 +446,12 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
 CONFIG_EXTCON_USB_GPIO=m
+CONFIG_IIO=y
+CONFIG_IIO_KFIFO_BUF=y
+CONFIG_IIO_SW_TRIGGER=y
+CONFIG_LSM9DS0=m
+CONFIG_IIO_HRTIMER_TRIGGER=y
+CONFIG_IIO_SYSFS_TRIGGER=y
 CONFIG_PWM=y
 CONFIG_PWM_RCAR=y
 CONFIG_RESET_CONTROLLER=y
