DTS: KF: activate LSM9DS0 9-DOF sensors driver.
Change-Id: Ifa29a9874c6ddfa0f0693915450f228ee4bf1387
Signed-off-by: Sergii Boryshchenko <sergii.boryshchenko@globallogic.com>

--- a/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
+++ b/arch/arm64/boot/dts/renesas/android-kingfisher.dtsi
@@ -709,12 +709,12 @@
 		};
 
 		lsm9ds0_acc_mag@1d {
-			compatible = "st,lsm9ds0_accel_magn";
+			compatible = "lsm9ds0_accel_magn";
 			reg = <0x1d>;
 		};
 
 		lsm9ds0_gyr@6b {
-			compatible = "st,lsm9ds0_gyro";
+			compatible = "lsm9ds0_gyro";
 			reg = <0x6b>;
 		};
 	};
